# dave_sim

./: .gitmodules  README.md
ds_msgs/: README.md
ds_msgs/LICENSES/: bsd_license.cpp  bsd_license.py
ds_msgs/ds_acomms_msgs/: CMakeLists.txt
ds_msgs/ds_acomms_msgs/msg/: AcksExpected.msg  AcousticModemData.msg  MicromodemData.msg  ModemData.msg  Point_F32.msg  QueueDefinition.msg  TDMASlots.msg  Vector3_F32.msg
ds_msgs/ds_acomms_msgs/srv/: ModemDataRequest.srv
ds_msgs/ds_actuator_msgs/: CMakeLists.txt
ds_msgs/ds_actuator_msgs/msg/: DropweightCmd.msg  ServoCmd.msg  ServoState.msg  Tecnadyne561.msg  ThrusterCmd.msg  ThrusterState.msg  XrState.msg
ds_msgs/ds_actuator_msgs/srv/: XrCmd.srv
ds_msgs/ds_control_msgs/: CMakeLists.txt
ds_msgs/ds_control_msgs/msg/: ActuatorInputs.msg  BottomFollow1D.msg  ControllerEnum.msg  ExternalBottomFollowAlarm.msg  ExternalBottomFollowTimedOverride.msg  GoalLegLatLon.msg  GoalLegState.msg  JoystickEnum.msg  PidSettings.msg  RovAllocationEnum.msg  RovAutoState.msg  RovControlGoal.msg  RovControllerState.msg  RovSwitchState.msg
ds_msgs/ds_control_msgs/srv/: RovAutoCommand.srv
ds_msgs/ds_core_msgs/: CMakeLists.txt  HEADERS.md
ds_msgs/ds_core_msgs/msg/: Abort.msg  ByteSequence.msg  ClockOffset.msg  Countdown.msg  CountdownMonitor.msg  CriticalProcess.msg  Diag.msg  DsHeader.msg  IoCommand.msg  IoCommandList.msg  IoSMQueues.msg  KeyBool.msg  KeyDouble.msg  KeyFloat.msg  KeyInt.msg  ParamDescription.msg  ParamUpdate.msg  RawData.msg  Status.msg  StringStamped.msg
ds_msgs/ds_core_msgs/srv/: IoSMcommand.srv  StringCmd.srv  VoidCmd.srv
ds_msgs/ds_hotel_msgs/: CMakeLists.txt
ds_msgs/ds_hotel_msgs/msg/: A2D2.msg  BatMan.msg  Battery.msg  Charge.msg  ClioBattery.msg  ClioBatteryPack.msg  HTP.msg  HTPGL.msg  PWR.msg  PWRdevice.msg  PowerSupply.msg  PwrSwitch.msg  PwrSwitchDeviceCmd.msg  PwrSwitchDeviceStatus.msg  PwrSwitchDevices.msg  TriggerChannelConfig.msg  XR.msg  XrSimState.msg
ds_msgs/ds_hotel_msgs/srv/: AbortCmd.srv  BatteryCmd.srv  ChargeCmd.srv  ClioChgCmd.srv  PowerCmd.srv  PowerSupplyCommand.srv  PwrSwitchCmd.srv  TrigPrmCtrlCmd.srv
ds_msgs/ds_multibeam_msgs/: CMakeLists.txt
ds_msgs/ds_multibeam_msgs/msg/: MultibeamFilterStats.msg  MultibeamGrid.msg  MultibeamGridStats.msg  MultibeamRaw.msg  NorbitMB.msg  NorbitWC.msg
ds_msgs/ds_multibeam_msgs/srv/: LoadXmlCmd.srv  NorbitCmd.srv  PingCmd.srv  PwrCmd.srv  QueryCmd.srv  SettingsCmd.srv
ds_msgs/ds_mx_msgs/: CMakeLists.txt
ds_msgs/ds_mx_msgs/msg/: MissionDisplay.msg  MissionElementDisplay.msg  MxEvent.msg  MxEventLog.msg  MxMissionStatus.msg  MxSharedParams.msg  MxTaskStatus.msg  StdPayloadCommand.msg
ds_msgs/ds_mx_msgs/srv/: MxUpdateSharedParams.srv
ds_msgs/ds_nav_msgs/: CMakeLists.txt
ds_msgs/ds_nav_msgs/cmake/: FindClangFormat.cmake
ds_msgs/ds_nav_msgs/msg/: AggregatedState.msg  Buoyancy.msg  DeadReck.msg  FlaggedDouble.msg  LatLon.msg  NavState.msg  (+4 more)
ds_msgs/ds_nmea_msgs/: CMakeLists.txt
ds_msgs/ds_nmea_parsers/: CMakeLists.txt
ds_msgs/ds_nmea_parsers/include/ds_nmea_parsers/: Gga.h  Gll.h  Hdt.h  Inf.h  PixseAccest.h  PixseAlgsts.h  PixseAtitud.h  PixseConfig1Int.h  PixseConfig2Int.h  PixseFogest.h  PixseHeave.h  PixseHspos.h  PixseHtsts.h  PixsePositi.h  PixseSpeed.h  PixseStatus.h  PixseStdhrp.h  PixseStdpos.h  PixseStdspd.h  PixseUtmwgs.h  Tro.h  Vtg.h  Zda.h  util.h
ds_msgs/ds_nmea_parsers/src/ds_nmea_parsers/: Gga.cpp  Gll.cpp  Hdt.cpp  Inf.cpp  PixseAccest.cpp  PixseAlgsts.cpp  PixseAtitud.cpp  PixseConfig1Int.cpp  PixseConfig2Int.cpp  PixseFogest.cpp  PixseHeave.cpp  PixseHspos.cpp  PixseHtsts.cpp  PixsePositi.cpp  PixseSpeed.cpp  PixseStatus.cpp  PixseStdhrp.cpp  PixseStdpos.cpp  PixseStdspd.cpp  PixseUtmwgs.cpp  Tro.cpp  Vtg.cpp  Zda.cpp  util.cpp
ds_msgs/ds_nmea_parsers/src/test/: test_gga.cpp  test_gll.cpp  test_hehdt.cpp  test_inf.cpp  test_pixse_algsts.cpp  test_pixse_atitud.cpp  test_pixse_heave.cpp  test_pixse_htsts.cpp  test_pixse_positi.cpp  test_pixse_speed.cpp  test_pixse_status.cpp  test_pixse_stdhrp.cpp  test_pixse_stdpos.cpp  test_pixse_stdspd.cpp  test_pixse_utmwgs.cpp  test_tro.cpp  test_util.cpp  test_vtg.cpp  test_zda.cpp
ds_msgs/ds_ocomms_msgs/: CMakeLists.txt
ds_msgs/ds_sensor_msgs/: CMakeLists.txt
ds_msgs/ds_sensor_parsers/: CMakeLists.txt  README.md
ds_sim/: .gitignore  CMakeLists.txt  README.md  VEHICLE_MODELLING.md
ds_sim/LICENSES/: BSD_LICENSE.TXT  bsd_license.xacro
ds_sim/gazebo_msgs/: SensorDepth.proto  SensorDvl.proto  SensorIns.proto  VehicleState.proto
ds_sim/gazebo_src/: depth_util.cc  depth_util.hpp  dsros_depth.cc  dsros_depth.hh  dsros_dvl.cc  dsros_dvl.hh  dsros_hydro.cc  dsros_hydro.hh  dsros_ins.cc  dsros_ins.hh  dsros_sensors.cc  dsros_spotlight.cc  dsros_spotlight.h  dsros_thruster.cc  dsros_thruster.hh
ds_sim/include/ds_sim/: common.hpp
ds_sim/objects/: sentry_dropweights.xacro
ds_sim/src/: dsros_depth_plugin.cc  dsros_depth_plugin.hh  dsros_dvl_plugin.cc  dsros_dvl_plugin.hh  dsros_gps_plugin.cc  dsros_gps_plugin.hh  dsros_ins_plugin.cc  dsros_ins_plugin.hh  dsros_jointstate_publisher.cc  dsros_navstate_publisher.cc  dsros_reson_plugin.cc  dsros_reson_plugin.hh
ds_sim/urdf/: avtrak_sim.xacro  basic_camera_sim.xacro  dspl_seasphere_sim.xacro  norbitWBMS_3D_sim.xacro  norbitWBMS_bathy_sim.xacro  nortek1000_sim.xacro  paro_sim.xacro  phins_sim.xacro  phinsins_sim.xacro  rdi300_sim.xacro  resonAUV3_sim.xacro  sensors_sim.xacro  xeos_gps_sim.xacro
ds_sim/world/: deep_synthetic.world  fastsim.world  large_terrain.sdf  salt_water_test_facility.world  shallow.world  synthetic.world  underwater_empty.world
ds_sim/world/resources/: convert_tif_to_grd.m  read_grd.m  salt_water_test_facility_asbuilt_20190905_fixed.stl  synthetic_terrain.grd  synthetic_terrain.tif  tank-asbuilt-dense-p025m.bt
sonar_rviz_plugin/: CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml
sonar_rviz_plugin/launch/: frames.gv  sonar.launch
sonar_rviz_plugin/msg/: ProcessedRange.msg
sonar_rviz_plugin/src/: sonar_display.cpp  sonar_display.h
uuv_simulator/uuv_model_plugins/: CMakeLists.xtxt
(+117 files in other folders)
